assets/scss/_home.scss
.home-page-body {
    @include page-body;
}

.home-header {
    padding: 32px 0;
}

.home-header-content {
    @include page-body;
    display: flex;
    justify-content: space-between;
    gap: 24px;
    align-items: flex-end;
    padding-top: 72px;
    padding-bottom: 48px;

    @include tablet {
        flex-direction: column;
        gap: 24px;
        padding-top: 32px;
        padding-bottom: 0;
        align-items: stretch;
    }
}

.home-header-tag {
    line-height: 1em;
    flex-grow: 1;

    @include tablet {
        max-width: 100%;
    }
}

.home-header-headline {
    font-size: 120px;
    font-weight: 300;
    line-height: 52px;
    padding: 0;
    margin: 0;

    @include tablet {
        text-align: center;
    }

    strong {
        font-family: $secondary-font;
        font-weight: 900;
        display: block;
    }

    small {
        font-weight: 300;
        font-size: 32px;
        color: $mutted-color;
        letter-spacing: 6px;
    }
}

.home-header-tag-line {
    display: block;
    font-size: 26px;
    font-weight: 400;
    line-height: 1.1em;
    margin: 12px 0;
    color: $dark-color;
    text-decoration: none;
    padding: 6px 12px;
    line-height: 32px;
    transform: translate(-12px, -6px);

    @include tablet {
        text-align: center;
    }

    &:hover {
        background: $dark-color;
        border-radius: 6px;
        color: $light-color;
        font-family: monospace;
        font-size: 22px;
        text-transform: lowercase;

        &::before {
            content: '$';
        }

        .home-header-tag-line-occupation {
            color: $secondary-color;
        }
    }
}

@keyframes blinkTextCursor {
    from {
        color: $very-mutted-color;
    }
    to {
        color: transparent;
    }
}


.home-header-tag-line-we-are {
    font-weight: 600;;
}

.home-header-tag-line-occupation {
    display: inline-block;
    color: $primary-color;
    font-weight: 400;

    &::after {
        content: '\2581';
        animation: blinkTextCursor 800ms steps(44) infinite normal;
    }
}

.home-header-join-us-cta {
    font-size: 24px;
    max-width: 300px;
    color: $mutted-color;

    @include tablet {
        display: block;
        max-width: 100%;
    }
}

.home-header-join-us-text {
    @include pharagraph;
    font-size: 20px;
    margin: 12px 0;

    a, a:visited {
        color: $primary-color;
    }

    a:hover, a:active {
        background: $primary-color;
        color: $light-color;
    }
}

.home-header-join-us-cta-btn {
    @include cta-btn;
    display: inline-block;

    @include tablet {
        display: block;
        width: 100%;
    }
}

.home-participate {
    background: $primary-color;
    color: $light-color;
    padding: 64px 0;
}

.home-participate-title {
    @include section-title;
    border-bottom: solid 10px $secondary-color;
}

.home-participate-container {
    @include columns-container;
    padding-top: 32px;
}

.home-participate-item {
    flex: 1 1 0px;
}

.home-participate-content {
    font-size: 17px;
    line-height: 1.6em;

    p {
        margin: 12px 0;
    }

    strong {
        font-weight: 700;
    }

    em {
        font-style: italic;
    }

    a, a:visited {
        color: $secondary-color;
        font-weight: 600;

        &:hover, &:active {
            background: $secondary-color;
            color: $primary-color;
        }
    }

    ul {
        margin-left: 28px;
        list-style-type: "\1F44D\20";

        li {
            margin: 6px 0;
        }
    }
}

.home-participate-item-title {
    @include title;
    margin: 32px 0;
}

.home-membership {
    background: $secondary-color;
    padding: 64px 0;

    p {
        margin: 6px 0;
    }
}

.home-membership-container {
    @include columns-container;
}

.home-membership-description {
    @include pharagraph;
    @include has-strong;
    font-size: 20px;

    a, a:visited, a:active {
        color: $primary-color;
        font-weight: 700;
    }

    a:hover {
        color: $secondary-color;
        background: $primary-color;
    }
}

.home-membership-title {
    @include section-title;
    border-bottom: solid 10px $dark-color;
}

.home-membership-item {
    flex: 1 1 0px;

    p {
        font-size: 17px;
        line-height: 1.6em;
    }
}

.home-membership-item-title {
    @include title;
    margin: 52px 0;

    @include tablet {
        margin: 24px 0;
    }
}

.home-events {
    padding: 48px 0;
}

.home-events-title {
    @include section-title;
    border-bottom: solid 10px $secondary-color;
}

.home-events-description {
    @include pharagraph;
    @include has-strong;
    font-size: 19px;

    a, a:visited, a:active {
        color: $primary-color;
    }

    a:hover {
        color: $light-color;
        background: $primary-color;
    }
}

.home-event-title {
    margin: 64px 0 18px 0;
    font-weight: 600;
    font-size: 32px;
    display: inline-block;
}

.home-event-link {
    color: $dark-color;
    text-decoration: none;
}

.home-event-description {
    @include pharagraph;
    font-size: 17px;
    line-height: 1.6em;
}

.home-event-item {
    padding-bottom: 32px;
    border-bottom: 2px solid $very-mutted-color;

    &:last-child {
        border-bottom: none;
    }
}

.home-event-date {
    background: $primary-color;
    color: $light-color;
    font-weight: 600;
    padding: 0 4px;
    border-radius: 2px;
}

.home-event-place {
    font-weight: 600;
    font-style: italic;
    color: $mutted-color;
}

